# wsbuilder

./: .gitignore  AGENTS.md  API.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  FAST.md  GETTING_STARTED.md  GITHUB_REPO_SETUP.md  INSTALL.md  LICENSE  MANIFEST.in  PENDIENTE  README.md  RESUMEN.md  ROADMAP.md  SECURITY.md  SUPPORT.md  agent.py  app.py  banner_rules.py  country_centroids.py  framework.py  geoip_seed.py  getDBNIC.py  getData.py  icon.icns  manage.py  master.py  mkdocs.yml  pyproject.toml  requirements-docs.txt  scan_payloads.py  server.py  settings.py  ws_demo.py
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/rulesets/: protect-develop.json  protect-main.json  protect-release.json  protect-tags-v.json
.github/workflows/: codeql.yml  docs-pages.yml  main-only-from-develop.yml  package-build.yml  promote-and-release.yml  publish-packages.yml  release-from-main.yml  sync-rulesets.yml
QA/: report.md
data/: README.md  banner_probe_requests.json  banner_regex_rules.json  country_centroids.json  ip_presets.json
docs/: 404.html  CNAME  README.md  ai-predict.md  api-map.md  app-http.md  architecture.md  banners.md  cache-security.md  cache.md  data-orm.md  dns.md  full-project.md  getting-started.md  guia-completa.md  http.md  ia.md  index.md  install.md  network-edge.md  observability-tasks.md  observability.md  persistence.md  proxy.md  repository_visibility.md  scanning.md  security.md  tasks.md  websocket.md
docs/application/: advanced.md  easy.md  index.md
docs/assets/javascripts/: mermaid-init.js
docs/assets/stylesheets/: extra.css
docs/deployment/: github-pages.md
docs/help/: index.md  microservices.md
docs/m/: index.md
docs/reference/: advanced.md  cache.md  dns.md  http.md  index.md  logs.md  metrics.md  orm.md  proxyi.md  security.md  tasks.md  utilities.md  websocket.md
docs/screenshots/: README.md
docs/stylesheets/: extra.css
examples/full-project/: README.md  app.py  pyproject.toml  upstream.py
frontend/: package-lock.json  package.json  vue.config.js
frontend/public/: index.html  manifest.json
frontend/public/geo/: world-detailed.geojson  world.geojson
frontend/scripts/: vue-cli-safe.js
frontend/src/: App.vue  main.js
frontend/src/components/: MapPanel.vue
frontend/src/router/: index.js
frontend/src/state/: appStore.js
frontend/src/styles/: app.css
frontend/src/utils/: d3Loader.js
frontend/src/views/: AgentsView.vue  ApiView.vue  BannersView.vue  CatalogView.vue  ChartsView.vue  DashboardView.vue  PortsView.vue  (+5 more)
packaging/deb/: README.md  build.sh
packaging/zip/: README.md  build.sh
scripts/: agent-workflow.sh  generate_certs.py  qa_ui_cdp.js  repo_visibility_check.sh  run_qa_chromium.sh  set_github_about.sh
src/wsbuilder/: __init__.py  __main__.py  app.py  cache.py  caches.py  constants.py  cookies.py  db_replicas.py  dns.py  framework.py  headers.py  http.py  ia.py  logs.py  metrics.py  orm.py  predicts.py  proxyi.py  security.py  server.py  tasks.py  ws.py  ws_demo.py
src/wsbuilder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_agent_workflow.py  test_app_threads.py  test_cache.py  test_caches.py  test_core_hardening.py  test_demo_monitor.py  test_dns.py  test_docs.py  test_headers_cookies.py  test_ia.py  test_logs.py  test_metrics.py  test_orm.py  test_orm_replicas.py  test_proxyi.py  test_security.py  test_tasks.py  test_ws.py
(+8 files in other folders)
