[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wsbuilder"
version = "0.16.0"
description = "Framework ligero HTTP + WebSocket."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "wsbuilder Authors" }]
keywords = ["websocket", "http", "framework", "server", "python"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[project.scripts]
wsbuilder = "wsbuilder.__main__:main"
wsbuilder-demo = "wsbuilder.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["wsbuilder"]
